--- a/style.css
+++ b/style.css
@@ -4,22 +4,27 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .header-container {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header-container img {
   width: 100%;
 }
+
 .header-container .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.header-container { text-align: center;
-}
+
+  .header-container { 
+    text-align: center;
+  }
 }
 
 .main-container {
@@ -27,31 +32,36 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-lable {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-wrapper {
   display: flex;
 }
+
 ul {
-  margin:0;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
+
 li, h3 {
-  list-style:none;
+  list-style: none;
 }
+
 input,button{
-  outline:none;
+  outline: none;
 }
+
 button {
   background: none;
   border: 0px;
@@ -61,9 +71,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 button:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 h3,
 label[for="new-task"] {
@@ -75,6 +87,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -87,6 +100,7 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 input[type="text"]:focus {
   color: #333;
 }
@@ -96,6 +110,7 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
+
 input#new-task {
   width: 318px;
 }
@@ -105,11 +120,11 @@ li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 li > * {
   vertical-align: middle;
 }
@@ -117,40 +132,44 @@ li > * {
 li > input[type="checkbox"] {
   margin: 0 10px;
 }
+
 li > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 li >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
+
 button.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 button.delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
 ul#completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-  display:none
+  display: none;
 }
 
 ul li.edit-mode input[type=text] {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px;
 }
 
 ul li.edit-mode label {
-  display:none;
+  display :none;
 }
