--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ ul {
   padding: 0;
 }
 
-li, h3 {
+li, 
+h3 {
   list-style: none;
 }
 
@@ -140,7 +141,7 @@ li > label {
   width: 226px;
 }
 
-li >    input[type="text"] {
+li > input[type="text"] {
   width: 226px;
 }
 
