--- a/style.css
+++ b/style.css
@@ -1,95 +1,52 @@
-/* Basic Style */
-body {
+.todo-body {
+  width: 500px;
+  margin: 8px auto;
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.header-container {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
+.header {
   text-align: right;
 }
 
-.header-container img {
+@media (max-width: 768px) {
+
+  .header {
+    text-align: center;
+  }
+
+}
+
+.header__pict {
   width: 100%;
 }
 
-.header-container .more-inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
-
-  .header-container { 
-    text-align: center;
-  }
-}
-
-.main-container {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-
-.task-lable {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-
-.task-wrapper {
+.section__wrapper {
   display: flex;
+  margin-bottom: 16px;
+  padding-top: 20px;
 }
 
-ul {
+.section__tasks {
   margin: 0;
   padding: 0;
 }
 
-li, 
-h3 {
+.section__task {
   list-style: none;
 }
 
-input,button{
+.section__input,
+.section__button {
   outline: none;
 }
 
-button {
-  background: none;
-  border: 0px;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-}
-
-button:hover {
-  color: #3a3a3a;
-}
-
-/* Heading */
-h3,
-label[for="new-task"] {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
-}
-
-input[type="text"] {
+.section__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -102,75 +59,91 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.section__input:focus {
   color: #333;
 }
 
-/* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
+.section__label,
+.section__input {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
 }
 
-input#new-task {
-  width: 318px;
+.section__button {
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
 }
 
-/* Task list */
-li {
+.section__button:hover {
+  color: #3a3a3a;
+}
+
+.section__name {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.section__task {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.section__check {
   margin: 0 10px;
 }
 
-li > label {
+.section__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.section__input {
   width: 226px;
 }
 
-button.delete img {
+.section__button-image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.section__button-image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.section__tasks_mode_completed .section__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.section__tasks .section__input {
   display: none;
 }
 
-ul li.edit-mode input[type=text] {
+.section__task_edit .section__input {
   display: inline-block;
-  width: 224px;
 }
 
-ul li.edit-mode label {
-  display :none;
+.section__task_edit .section__label {
+  display: none;
 }
